--- a/Komiku VaultUpdated SC/L4D landing pageUpdated/MAIN.html
+++ b/Komiku VaultUpdated SC/L4D landing pageUpdated/MAIN.html
@@ -123,6 +123,13 @@
         <section id="contact">
             <footer class="footer">
                 <p>&copy; 2025 Komikku vault. All rights reserved.</p>
+                
+                    <!-- Disclaimer -->
+                <p>
+                  This website is created for <strong>educational purposes only</strong>.<br>
+                  All images and materials are the property of their respective owners.<br>
+                  No copyright infringement intended.
+                </p>
                 <p>
                     <a href="#">Privacy Policy</a> |
                     <a href="#">Terms of Service</a> |
@@ -154,3 +161,4 @@
     </script>
 </body>
 </html>
+
